Clean remaining languages